Atualização: pegando os valores de um arquivo